# ENG_API

./: .gitignore  .pre-commit-config.yaml  README.md  data_var.csv  model.pkl  pyproject.toml  requirements.txt
.github/: pr-badge.yml
.github/workflows/: script.yml
SRC/ETL/: db_csv.py
SRC/api/: actions.py  collect_data.py  database.py  mdels.py  model_api.py  models.py  schemas.py
SRC/data/: data.csv
SRC/frontend/: database.py  frontend.py
SRC/model/: model.pkl  model.py
SRC/tests/: test_api.py
