[tool.poetry]
name = "eng-api"
version = "0.1.0"
description = "Criando uma API do zero"
authors = ["Lucas Alves <lucasalves_taz@hotmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.*"
numpy = "^1.26.4"
scikit-learn = "^1.5.0"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.1"}
sqlalchemy = "^2.0.30"
psycopg2-binary = "^2.9.9"
pydantic = "^2.7.4"
streamlit = "^1.36.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"
python-dotenv = "^1.0.1"
taskipy = "^1.13.0"

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.taskipy.tasks]
run = 'fastapi dev SRC/api/model_api.py'
test = 'pytest -s -x --cov=fast_zero -vv'
post_test = 'coverage html'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
